# SolarSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  errorHandler.hpp  game.hpp  main.cpp  shaders.cpp  shaders.hpp
dep/glad/include/glad/: gl.h
dep/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dep/glfw/examples/: Makefile  cmake_install.cmake
dep/glfw/src/: Makefile  cmake_install.cmake
dep/glfw/tests/: Makefile  cmake_install.cmake
dep/glm/: Makefile  cmake_install.cmake
dep/glm/glm/: Makefile  cmake_install.cmake
docs/: Doxyfile.in
include/: camera.hpp  entity.hpp  errorHandler.hpp  game.hpp  light.hpp  material.hpp  mesh.hpp  planet.hpp  scene.hpp  shaders.hpp  sun.hpp  utils.hpp
shaders/: frag.glsl  vert.glsl
src/: entity.cpp  game.cpp  main.cpp  mesh.cpp  planet.cpp  scene.cpp  shaders.cpp  utils.cpp
